# experiment-simulations

./: .gitignore  README.md  _config.yml  index.md  pyproject.toml  writeup.md
notebooks/: 01_simulate_user_sessions.ipynb  01_simulate_users_and_exp.ipynb  02_run_experiments.ipynb  03_visualize_results.ipynb
scripts/: run_full_simulation.py
src/evaluation/: __init__.py  evaluate_experiments.py  visualize_experiments.py
src/experiments/: __init__.py  experiment.py  pre_test_analysis.py
src/simulation/: __init__.py  user_sessions.py
