[project]
name = "experiment-simulations"
version = "1.0.0"
description = "Comparing common experiment methods for A/B testing"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
    "scipy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
